# htap_poc

./: api_playground.py  benchmark.py  playground2.py  playgroung1.py  readme.md  requirements.txt  res.md
scripts/: api_playground.py  benchmark_comparison.py  benchmark_iot.py  playground2.py  test_columnar.py
scripts/rust_benchmark/: Cargo.toml  README.md  generate_data.py  plot_results.py  requirements.txt  run_benchmark.py
scripts/rust_benchmark/src/: main.rs
src/core/: api.py  catalog.py  expressions.py  filters.py  storage.py  vector_operations.py
src/utils/: coordinates.py  filters.py  schema_manager.py  sequence_manager.py
